--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,10 @@
 		<version>1.4.0.RELEASE</version>
 		<relativePath />
 	</parent>
-
+	<properties>
+    	<maven.compiler.target>12</maven.compiler.target>
+    	<maven.compiler.source>12</maven.compiler.source>
+	</properties>
  <dependencies>
 		<!-- Project modules -->
 		<dependency>
